# Theta_Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  EquiExtend.cpp  EquiExtend.hpp  EquiTrans.cpp  EquiTrans.hpp  Makefile  MathCalcs.cpp  MathCalcs.cpp~  MathCalcs.hpp  MathCalcs.hpp~  OcvManip.cpp  OcvManip.hpp  OcvManip.hpp~  PclManip.cpp  PclManip.hpp  PclManip.hpp~  PersCamera.cpp  PersCamera.hpp  PointFeature.cpp  PointFeature.hpp  Triangle.cpp  Triangle.hpp  ViewDirection.hpp  WarpImage.cpp  WarpImage.hpp  boost_headers.hpp  boost_headers.hpp~  cmake_install.cmake  cv_headers.hpp  cv_headers.hpp~  load  load.cpp  load.cpp~  log.txt  matcher.h  modifieload.cpp  pcl_headers.hpp  (+9 more)
Doc/html/: ColorMap_8hpp_source.html  EquiExtend_8hpp_source.html  EquiTrans_8hpp_source.html  MathCalcs_8hpp_source.html  OcvManip_8hpp_source.html  PclManipOld_8hpp_source.html  (+51 more)
Headers/: EquiTrans.hpp  MathCalcs.hpp  OcvManip.hpp  PclManip.hpp  Triangle.hpp  WarpImage.hpp  boost_headers.hpp  cv_headers.hpp  matcher.hpp  pcl_headers.hpp  test.hpp
Matlab/: read_sphere_points.m  sphere_delaunay_file01.m  sphere_delaunay_file02.m  sphere_points.txt.back  write_triangle_vertices.m  write_triangles_index.m
Sources/: ColorMap.cpp  EquiTrans.cpp  Makefile  MathCalcs.cpp  OcvManip.cpp  PclManip.cpp  PersCamera.cpp  cmake_install.cmake  ext_main.cpp  load  load.cpp  trans  tri
Txt_files/: Points3D_test3.txt  Points3D_test3_1.txt  Points3D_test4.txt  Points3D_test4_1.txt  trianglesOmniImage1.txt  trianglesOmniImage2.txt  trianglesPoints3D_test3.txt  trianglesPoints3D_test4.txt
(+52 files in other folders)
